# hermes-tool-test-suite

./: .env.example  .gitignore  .gitleaks.toml  LICENSE  PHASE1_VALIDATION.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docker/: .dockerignore  .env.example  Dockerfile  README.md  SECURITY.md  docker-compose.yml
docs/: ADDING_TESTS.md  MODEL_MATRIX.md  RUNNING.md  docker-secrets-migration.md
fixtures/: tool_schemas.json
harness/: __init__.py  backends.py  models.py  providers.py  runner.py  verifier.py
metrics/: __init__.py  loop_guard.py  side_effect.py  tool_invocation.py  tool_selection.py
results/: .gitkeep
tests/: conftest.py
tests/level1_single_tool/: test_code_execution.py  test_file.py  test_terminal.py  test_web.py
tests/level2_tool_selection/: test_irrelevance.py  test_right_tool.py
tests/level3_chaining/: test_data_pipeline.py  test_web_to_file.py
tests/level4_browser/: test_loop_guard.py
tests/level5_computer_use/: REQUIRES_HOST_ACCESS.md  test_capture.py
tests/level6_model_matrix/: test_compare.py
