[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legionforge-hermes-tool-test"
version = "0.1.0"
description = "Comprehensive tool-invocation testing suite for Hermes AI agent"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Claude Code / JP Cruz", email = "jp@legionforge.org"}
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pytest>=8.0.0",
    "pytest-html>=4.0.0",
    "pytest-timeout>=2.1.0",
    "deepeval>=1.0.0",
    "paramiko>=3.4.0",  # SSH client for Docker host access
    "httpx>=0.25.0",    # Async HTTP client for URL verification
    "pyyaml>=6.0",      # YAML prompt templates
    "python-dotenv>=1.0.0",  # .env support
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.setuptools]
packages = ["harness", "metrics"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--timeout=600",
]
markers = [
    "level1: Basic single-tool invocation tests",
    "level2: Tool selection accuracy tests",
    "level3: Tool chaining and pipelines",
    "level4: Browser automation tests",
    "level5: Host machine control (computer_use)",
    "slow: Tests that take >10 seconds",
    "requires_computer_use: Requires --computer-use flag",
]

[tool.black]
line-length = 120
target-version = ['py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 120
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
